--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,8 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.7.0")
     kapt("androidx.lifecycle:lifecycle-compiler:2.7.0")
 
+
+    //Glide
+    implementation("com.github.bumptech.glide:glide:4.16.0")
+
 }
